--- a/profile.css
+++ b/profile.css
@@ -79,3 +79,19 @@ overflow: hidden; /* Prevents overflow issues */
 background-color: #444;
 border-radius: 10px;
 }
+
+#chartContainer{
+    width: 100%;
+    overflow-x: auto; /* Enables horizontal scrolling */
+    white-space: nowrap; /* Prevents chart from wrapping */
+    scrollbar-width: thin; /* For Firefox */
+    scrollbar-color: #444 #222; /* Track and thumb color for Firefox */
+}
+
+#chartContainer::-webkit-scrollbar-thumb {
+    background: #6c63ff; /* Match chart color */
+    border-radius: 10px;
+}
+#chartContainer div{
+    min-width: 900px; /* Adjust this value as needed */
+}
