--- a/profile.css
+++ b/profile.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -35,9 +34,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 470px;
 }
 
-h2, h3 {
+h2,
+h3 {
     text-align: center;
     margin-bottom: 20px;
 }
@@ -68,19 +69,21 @@ canvas {
     background-color: #444;
     border-radius: 10px;
 }
-#xpBarChart  , #projectchart{
-width: 100%;
-height: auto;
-min-height: 250px; /* Ensures proper height */
-display: flex;
-justify-content: center;
-align-items: center;
-overflow: hidden; /* Prevents overflow issues */
-background-color: #444;
-border-radius: 10px;
+#xpBarChart,
+#projectchart {
+    width: 100%;
+    height: auto;
+    min-height: 250px; /* Ensures proper height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Prevents overflow issues */
+    background-color: #444;
+    border-radius: 10px;
+    min-height: 450px;
 }
 
-#chartContainer{
+#chartContainer {
     width: 100%;
     overflow-x: auto; /* Enables horizontal scrolling */
     white-space: nowrap; /* Prevents chart from wrapping */
@@ -92,6 +95,6 @@ border-radius: 10px;
     background: #6c63ff; /* Match chart color */
     border-radius: 10px;
 }
-#chartContainer div{
+#chartContainer div {
     min-width: 900px; /* Adjust this value as needed */
 }
